# HTTP-Server

./: .gitignore  CMakeLists.txt  README.md  serverdocs.txt  todo.txt
archive/: main.c
client/: main  main.c
include/: handler.h  main.h  response.h  router.h  types.h  utils.h
public/: index.html
server/: index.html  main  main.c  test.sh
src/: handler.c  main.c  response.c  router.c  utils.c
